@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "form.html" %}
 {% block main %}
 
 {% if message != '' %}
