@@ -13,3 +13,4 @@
 2016-10-06:
 
 - Option to append documents and show pages was added.
+- Record of rights for specific documents
